Fixed shifting aliens and clearing intervals

--- a/css/app.css
+++ b/css/app.css
@@ -20,10 +20,6 @@ body {
   font-size: 1.5em;
 }
 
-.laser-cell {
-  color: red;
-  background-color: rgb(30, 186, 80);
-}
 
 .hide {
   display: none;
